--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f src/config/dev.env nodemon src/index.js",
+    "dev": "env-cmd -f src/config/dev.env nodemon src/index.js -e js,hbs",
     "test": "env-cmd -f src/config/test.env jest --watch --runInBand"
   },
   "jest": {
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.8",
